# server

./: .env.example  Makefile.toml  docker-compose.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
crates/api/: Cargo.toml
crates/api/src/: cache.rs  lib.rs
crates/api/src/mutation/: mod.rs
crates/api/src/mutation/account/: input.rs  mod.rs
crates/api/src/mutation/session/: input.rs  mod.rs
crates/api/src/mutation/user/: input.rs  mod.rs
crates/api/src/query/: category.rs  mod.rs  session.rs  user.rs
crates/api/src/tests/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/mutation/: mod.rs
crates/core/src/mutation/account/: mod.rs
crates/core/src/mutation/session/: mod.rs
crates/core/src/mutation/user/: mod.rs
crates/core/src/query/: category.rs  mod.rs  session.rs  user.rs
crates/entity/: Cargo.toml
crates/entity/src/: account.rs  ad.rs  application.rs  category.rs  lib.rs  prelude.rs  region.rs  session.rs  user.rs  verification_token.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs
crates/server/: Cargo.toml
crates/server/src/: log.rs  main.rs
