[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7", features = ["chrono", "uuid"] }
sea-orm = { version = "0.11.2", features = ["postgres-array", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.159", features = ["derive"] }
